# simple_sam2

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  example.ipynb  pyproject.toml
simple_sam2/: __init__.py  service.py
