[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-sam2"
version = "0.1.1"
description = "A lightweight wrapper around Meta SAM2 for practical long-video segmentation."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Varun Kolluru", email = "your@email.com" },
]
keywords = ["sam2", "segmentation", "video", "computer vision", "meta ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision",
    "numpy",
    "Pillow",
    "opencv-python>=4.8"
    ]

[project.urls]
Homepage = "https://github.com/varun-kolluru/simple_sam2"
Repository = "https://github.com/varun-kolluru/simple_sam2"
"Bug Tracker" = "https://github.com/varun-kolluru/simple_sam2/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["simple_sam2*"]
